--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,55 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+
+
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+*.*log
+*.idb
+*.enc
+*.db
+*.suo
+*.ilk
+*.pdb
+*.user
+*.ipch
+*.ide*
+*.lock
+*.cache
+*.cache
+*.json
+*.targets
