Tests don't see my list. I want to kill unit testing

--- a/hw2/List/List.Tests/List.Tests.csproj
+++ b/hw2/List/List.Tests/List.Tests.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D1C11B93-A907-4CBF-9258-E1BE8F03B0C5}</ProjectGuid>
+    <ProjectGuid>{06EE3472-C6FB-4BEA-AC55-DE311C3CFFA6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ListTests</RootNamespace>
-    <AssemblyName>ListTests</AssemblyName>
+    <RootNamespace>List.Tests</RootNamespace>
+    <AssemblyName>List.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -49,7 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="ListTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
