--- a/hw2/StackBasedCalculator/StackBasedCalculator/StackBasedCalculator.csproj
+++ b/hw2/StackBasedCalculator/StackBasedCalculator/StackBasedCalculator.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyStack1.cs" />
     <Compile Include="IStack.cs" />
+    <Compile Include="MyStack2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
