--- a/hw2/StackBasedCalculator/StackBasedCalculator/StackBasedCalculator.csproj
+++ b/hw2/StackBasedCalculator/StackBasedCalculator/StackBasedCalculator.csproj
@@ -48,6 +48,7 @@
     <Compile Include="MyStackOnList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PostfixCalculator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
