I implemented classes of exceptions. I also made implementation of Pop() and PushToPosition() with the keyword ovveride in UniqueList(). I added tests to UniqueList()

--- a/hw4/UniqueList/UniqueList/UniqueList.csproj
+++ b/hw4/UniqueList/UniqueList/UniqueList.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DuplicateElementException.cs" />
+    <Compile Include="ElementDoesNotExistException.cs" />
     <Compile Include="List.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
