--- a/hw2/StackBasedCalculator/appveyor.yml
+++ b/hw2/StackBasedCalculator/appveyor.yml
@@ -1,6 +1,6 @@
 image: Visual Studio 2017
 before_build:
-- nuget restore myCoolHomework/Homework.sln
+- nuget restore StackBasedCalculator.sln
 build:
 project: StackBasedCalculator.sln
 test_script:
