--- a/hw2/StackBasedCalculator/MyStackOnArray.Tests/StackBasedCalculator.Tests.csproj
+++ b/hw2/StackBasedCalculator/MyStackOnArray.Tests/StackBasedCalculator.Tests.csproj
@@ -63,6 +63,9 @@
       <Name>StackBasedCalculator</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
