Added reading from file

--- a/hw4/ParseTree/ParseTree/ParseTree.csproj
+++ b/hw4/ParseTree/ParseTree/ParseTree.csproj
@@ -5,4 +5,14 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Expression.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Expression.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
