--- a/hw6/ConsoleGame/ConsoleGame/ConsoleGame.csproj
+++ b/hw6/ConsoleGame/ConsoleGame/ConsoleGame.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="EventLoop.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="Map.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
