--- a/hw6/ConsoleGame/ConsoleGame/ConsoleGame.csproj
+++ b/hw6/ConsoleGame/ConsoleGame/ConsoleGame.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Character.cs" />
     <Compile Include="EventLoop.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Map.cs" />
