--- a/hw6/ConsoleGame/ConsoleGame/ConsoleGame.csproj
+++ b/hw6/ConsoleGame/ConsoleGame/ConsoleGame.csproj
@@ -43,12 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Character.cs" />
+    <Compile Include="Smiley.cs" />
     <Compile Include="EventLoop.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmileyHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
