seems ready but throws an exception

--- a/hw6/ConsoleGame/ConsoleGame/ConsoleGame.csproj
+++ b/hw6/ConsoleGame/ConsoleGame/ConsoleGame.csproj
@@ -45,8 +45,9 @@
   <ItemGroup>
     <Compile Include="Smiley.cs" />
     <Compile Include="EventLoop.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="Map.cs" />
+    <Compile Include="Map.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SmileyHandler.cs" />
