no more exception

--- a/hw6/ConsoleGame/ConsoleGame/ConsoleGame.csproj
+++ b/hw6/ConsoleGame/ConsoleGame/ConsoleGame.csproj
@@ -56,7 +56,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="map.txt" />
+    <Content Include="map.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
