--- a/hw6/ConsoleGame/ConsoleGame/ConsoleGame.csproj
+++ b/hw6/ConsoleGame/ConsoleGame/ConsoleGame.csproj
@@ -43,14 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Smiley.cs" />
+    <Compile Include="Question.cs" />
     <Compile Include="EventLoop.cs" />
     <Compile Include="Map.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SmileyHandler.cs" />
+    <Compile Include="QuestionHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
