--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ image: Visual Studio 2017
 environment:
   
   matrix:
-  - solution_path: Homework-Semester-2-/tree/ListGeneric/hw8/ListGeneric/List
+  - solution_path: Homework-Semester-2-/blob/ListGeneric/hw8/ListGeneric/ListGeneric.sln
   
 before_build:
   - nuget restore %solution_path%
