--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,7 @@ environment:
   
   matrix:
   - solution_path: hw8/ListGeneric/ListGeneric.sln
+  - solution_path: hw8/SetGeneric/SetGeneric.sln
   
 before_build:
   - nuget restore %solution_path%
